--- a/src/main/resources/templates/upload-form.html
+++ b/src/main/resources/templates/upload-form.html
@@ -11,6 +11,8 @@
         <input type="file" name="file" />
         <button type="submit">Upload</button>
     </form>
-    
+    <form action="/download" method="get">
+        <button type="submit">Download file</button>
+    </form>
 </body>
 </html>
